# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: test.yml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  base_user.html  base_welcome.html  index.html  login.html  user_delete.html  users_list.html
tests/: test_behavioral.py  test_views.py
