[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet educational project number 4"
authors = ["mjh-sakh <madjahead@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
coverage = "^5.5"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
